# golavAI

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: config.py  main.py
app/api/: deps.py
app/api/admin/: bookings.py
app/api/webhooks/: twilio_inbound.py  twilio_status.py
app/core/: exceptions.py  logging.py  metrics.py  security.py
app/db/: base.py  session.py
app/exports/: excel_exporter.py
app/integrations/openai/: adapter.py  tool_schemas.py
app/integrations/twilio/: adapter.py
app/models/: __init__.py  audit_log.py  booking.py  booking_slot_hold.py  conversation.py  customer.py  daily_export.py  escalation_task.py  inbound_event.py  message.py  outbound_message.py  pricing_rule.py  service_area.py
app/prompts/: system_prompt.py  templates.py
app/schemas/: booking.py  openai_output.py  twilio.py
app/services/: area_service.py  booking_service.py  conversation_service.py  pricing_service.py  tool_executor.py  vehicle_service.py
app/tests/: conftest.py
app/tests/fixtures/: twilio_inbound.json
app/tests/integration/: test_double_booking.py  test_webhook_inbound.py
app/tests/mocks/: mock_openai.py  mock_twilio.py
app/tests/unit/: test_area_service.py  test_booking_engine.py  test_idempotency.py  test_vehicle_classifier.py
app/workers/: beat_schedule.py  celery_app.py
app/workers/tasks/: dispatch_outbox.py  expire_holds.py  nightly_export.py  process_inbound.py
golav_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: export_today.py  seed.py
