[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "golav-agent"
version = "0.1.0"
description = "GOLAV AI WhatsApp Booking Agent"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    # Pydantic
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Database
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    # Redis / Celery
    "redis>=5.0.4",
    "celery[redis]>=5.4.0",
    # Twilio
    "twilio>=9.2.0",
    # OpenAI
    "openai>=1.35.0",
    # Structured logging
    "structlog>=24.2.0",
    "python-json-logger>=2.0.7",
    # HTTP utilities
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    # Timezone
    "pytz>=2024.1",
    # Excel export
    "openpyxl>=3.1.2",
    "xlsxwriter>=3.2.0",
    # Retry / resilience
    "tenacity>=8.3.0",
    # Metrics
    "prometheus-fastapi-instrumentator>=7.0.0",
    # Crypto / security
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=25.3.0",
    "freezegun>=1.5.0",
    "mypy>=1.10.0",
    "ruff>=0.4.7",
    "pre-commit>=3.7.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
